<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <android.support.v7.widget.Toolbar
        style="@style/toolbar"
        app:contentInsetStart="0dp"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/close_image"
                style="@style/toolbar_image"
                android:contentDescription="@string/cancel"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/toolbar_text"
                android:text="@string/default_toolbar_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/close_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title"
                />

            <ImageView
                android:id="@+id/check_image"
                style="@style/toolbar_image"
                android:contentDescription="@string/ok"
                android:src="@drawable/ic_check"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

</layout>